--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -117,7 +117,7 @@ select {
             <a class="nav-link" href="/transaction/">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/stats/">New Order</a>
+            <a class="nav-link" href="/order/add/">New Order</a>
           </li>
           
         </ul>
