--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -119,6 +119,10 @@ select {
           <li class="nav-item">
             <a class="nav-link" href="/order/add/">New Order</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'core.user_registration' %}">Registration</a>
+          </li>
           
         </ul>
       
