create price update javascript logic

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -133,7 +133,7 @@ select {
 
 		{% if user.is_authenticated %}
 		     <div class='col-xs-3 col-sm-3 col-md-3 col-md-offset-3' style="background-color:#F2F2F2; text-align:center" >	 												
-	         <h3> Usuario: <strong>{{ user.username  }}</strong> </h3>
+	         <h3> User: <strong>{{ user.username  }}</strong> </h3>
 	        </div>		 		
 	     {% endif %}
 
