#1 HOUR start orders logic in views and in models, unique reference generator

--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -19,7 +19,7 @@
 					      <div class="panel panel-default">
 						    <div class="panel-body">						    	
 						           <div class="input-group">
-								      <input type="text" class="form-control amount amount-cash">
+								      <input type="text" class="form-control amount amount-cash"  name="amount-cash">
 								      <div class="input-group-btn">
 										{{slt1 | safe}}
 								      </div><!-- /btn-group -->
@@ -36,7 +36,7 @@
 					      <div class="panel panel-default">
 						    <div class="panel-body">
 						           <div class="input-group">
-								      <input type="text" class="form-control amount amount-coin" value="1">
+								      <input type="text" class="form-control amount amount-coin" value="1" name="amount-coin">
 								      <div class="input-group-btn">
 								        {{slt2 | safe}}
 								      </div><!-- /btn-group -->
