--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -111,40 +111,30 @@ select {
 
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
   
-        <a class="navbar-brand" href="#">BTC Exchange App</a>
+        <a class="navbar-brand" href="/">BTC Exchange App</a>
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/transaction/">Orders</a>
+            <a class="nav-link" href="/order/">Orders</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/order/add/">New Order</a>
           </li>
-          
         </ul>
-      
+
+        {% if user.is_authenticated %}
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+            <a class="nav-link" href="#">User: <strong>{{ user.username  }}</strong></a>
+          </li>        
+
+          <li class="nav-item">
+           <a class="nav-link" href="/">Logout </a>
+          </li> 
+
+        </ul>
+        {% endif %}
     </nav>
 
-   <div class="row"  >
-   	     {% if request.session.empresa and request.session.empresa.show_logo   %}
-			<div class='col-xs-3 col-sm-3 col-md-3' style="background-color:#F2F2F2; text-align:center">	 												
-	          <img src="{{ request.session.empresa.logo }}" class="img-responsive" alt="" height="{{ request.session.empresa.alto_logo }}" width="{{ request.session.empresa.ancho_logo }}" />
-	        </div>	
-		 {% endif %}
-
-		{% if user.is_authenticated %}
-		     <div class='col-xs-3 col-sm-3 col-md-3 col-md-offset-3' style="background-color:#F2F2F2; text-align:center" >	 												
-	         <h3> User: <strong>{{ user.username  }}</strong> </h3>
-	        </div>		 		
-	     {% endif %}
-
-	     	{% if user.is_authenticated %}
-	        <div class='col-xs-3 col-sm-3 col-md-3' style="background-color:#F2F2F2; text-align:center">	 												
-	         <h3> <a href="/logout/">Logout</a></h3>
-	        </div>	
-	 		
-	     {% endif %}
-		 	
-	</div>
 		{% block main %}	
 
 		{% endblock %}
