--- a/templates/core/user_registration.html
+++ b/templates/core/user_registration.html
@@ -11,8 +11,10 @@
 <form method="post" class="form" enctype="multipart/form-data" >
   {% csrf_token %}
   
-  {% bootstrap_form form %}
 
-  <input type="submit" name="submit" id="submit" value="Register">
+  {% bootstrap_form profile_form %}
+  {% bootstrap_form user_form %}
+
+  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="Register">
 </form>
 {% endblock %}
