--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -25,7 +25,7 @@
   <meta name="author" content="">
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" /> 
 
-
+  <script src="https://use.fontawesome.com/9a25f329b7.js"></script>
 	<!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
 	<!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
 	<!--script src="js/less-1.3.3.min.js"></script-->
@@ -135,7 +135,7 @@ select {
           </li>        
 
           <li class="nav-item">
-           <a class="nav-link" href="/">Logout </a>
+           <a class="nav-link" href="{% url 'core.user_logout' %}">Logout</a>
           </li> 
 
         </ul>
