small pending changes

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -132,6 +132,14 @@ select {
           </li> 
 
         </ul>
+        {% else %}
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+           <a class="nav-link" href="/login">Login </a>
+          </li> 
+
+        </ul>
         {% endif %}
     </nav>
 
