--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -1,9 +1,10 @@
 {% extends "core/base.html" %}
+{% load i18n %}
 
 {% block main %}
 			<div class="page-header">
 				<h1>
-					BTC <small>{{ action }}</small>
+					{% trans "BTC" %}<small> {{ action }} </small>
 				</h1>
 			</div>
 			
@@ -11,8 +12,8 @@
 				<div class="col-xs-6 col-sm-6 col-md-6">
 								
 					<center>				
-					 <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='/order/add/'">Add New</button>
-					 <button type="button" class="btn btn-alert btn-lg" onclick="window.location.href='/'">Exit</button>
+					 <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='/order/add/'"> {% trans "New" %}</button>
+					 <button type="button" class="btn btn-alert btn-lg" onclick="window.location.href='/'"> {% trans "Exit" %}</button>
 					</center>				
 							
 				 </div>
@@ -30,14 +31,14 @@
 			<div class="col-xs-12 col-sm-12 col-md-12"> 
 			  <table class="table table-hover table-condensed">	 
   				<tr>
-  					<th>Date</th>
-  					<th>Reference</th>
-  					<th>Currency</th>
-  					<th>Amount</th>
-  					<th>BTC</th>
-  					<th>Paid</th>
-  					<th>Released</th>
-  					<th>Completed</th>
+  					<th>{% trans "Date" %}</th>
+  					<th>{% trans "Reference" %}</th>
+  					<th>{% trans "Currency" %}</th>
+  					<th>{% trans "Amount" %}</th>
+  					<th>{% trans "BTC" %}</th>
+  					<th>{% trans "Paid" %}</th>
+  					<th>{% trans "Released" %}</th>
+  					<th>{% trans "Completed" %}</th>
   				</tr>
 	    		
 	    		{% for order in orders %}
@@ -76,7 +77,7 @@
 
 		    		<tr>
 		    			<td colspan="10">
-		    				<h3>No records found</h3>	    
+		    				<h3>{% trans "No records found" %}</h3>	    
 		    		    </td>
 		    		</tr>
 
@@ -89,7 +90,7 @@
 		<div class="pagination">
 		    <span class="step-links">
 		        {% if orders.has_previous %}
-		            <a href="?page={{ orders.previous_page_number }}">previous</a>
+		            <a href="?page={{ orders.previous_page_number }}">{% trans "previous" %}</a>
 		        {% endif %}
 
 		        <span class="current">
@@ -97,7 +98,7 @@
 		        </span>
 
 		        {% if orders.has_next %}
-		            <a href="?page={{ orders.next_page_number }}">next</a>
+		            <a href="?page={{ orders.next_page_number }}">{% trans "next" %}</a>
 		        {% endif %}
 		    </span>
 		</div>
