--- a/templates/core/user_login.html
+++ b/templates/core/user_login.html
@@ -1,10 +1,11 @@
 {% extends "core/base.html" %}
 {% load bootstrap3 %}
+{% load i18n %}
 
 {% block main %}
 <div class="page-header">
   <h1>
-    BTC - Exchange <small>Login</small>
+    {% trans "BTC - Exchange" %} <small>{% trans "Login" %}</small>
   </h1>
 </div>
 
@@ -18,6 +19,6 @@
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-<p>Don't have an account? <a class="nav-link" href="{% url 'core.user_registration' %}">Register here</a></p>
-<p>Forgot your password? <a class="nav-link" href="{% url 'accounts.password_reset' %}">Reset it here</a></p>
+<p>{% trans "Don't have an account?" %} <a class="nav-link" href="{% url 'core.user_registration' %}">{% trans "Register here" %}</a></p>
+<p>{% trans "Forgot your password?" %} <a class="nav-link" href="{% url 'accounts.password_reset' %}">{% trans "Reset it here" %}</a></p>
 {% endblock %}
