--- a/templates/core/user_profile.html
+++ b/templates/core/user_profile.html
@@ -1,11 +1,12 @@
 {% extends "core/base.html" %}
 {% load bootstrap3 %}
 {% load staticfiles %}
+{% load i18n %}
 
 {% block main %}
     <div class="page-header">
         <h1>
-            BTC - Exchange <small>User Profile</small>
+            {% trans "BTC - Exchange" %} <small>{% trans "User Profile" %}</small>
         </h1>
     </div>
 
@@ -14,11 +15,11 @@
         <div class="well">
             
             <div class="alert alert-danger" role="alert" style="display:block" id="alert_phone_not_verified">
-                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Your phone number is not verified yet.
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> {% trans "Your phone number is not verified yet." %}
             </div> 
 
             <div class="alert alert-warning" role="alert" style="display:none" id="alert_verifying_phone">
-                <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;Verifying phone now...
+                <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>&nbsp;{% trans "Verifying phone now..." %}"
             </div>
 
             
@@ -26,27 +27,27 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="input-group"> 
-                        <input type="text" aria-label="Insert SMS verification token here" placeholder="Insert SMS verification token here" class="form-control" id="verification_code"> 
+                        <input type="text" aria-label={% trans "Insert SMS verification token here" %} placeholder={% trans "Insert SMS verification token here" %} class="form-control" id="verification_code"> 
                         <div class="input-group-btn"> 
-                            <button class="btn btn-default" type="button" id="verify_phone_now">Verify phone now</button> 
+                            <button class="btn btn-default" type="button" id="verify_phone_now">{% trans "Verify phone now" %}</button> 
                         </div> 
                     </div> 
                 </div>
 
                 <div class="col-md-4">
                     <a href="#" class="btn btn-success btn-sm pull-right" id="resend_sms_button">
-                        <i class="fa fa-repeat" aria-hidden="true"></i>&nbsp;Send-me the token again
+                        <i class="fa fa-repeat" aria-hidden="true"></i>&nbsp;{% trans "Send-me the token again" %}
                     </a>
                 </div>
             </div>
         </div>
     {% else %}
-        <label class="control-label" for="phone">Phone</label>
+        <label class="control-label" for="phone">{% trans "Phone" %}</label>
         <div class="input-group"> 
             <input type="text" aria-describedby="basic-addon2" value="{{request.user.profile.phone}}" disabled="disabled" class="form-control disabled">
             <span id="basic-addon2" class="input-group-addon">
                 <i class="fa fa-check-square-o" aria-hidden="true"></i>
-                Your phone has been verified.
+                {% trans "Your phone has been verified." %}
             </span>
         </div>
         <br>
