--- a/templates/core/user_registration.html
+++ b/templates/core/user_registration.html
@@ -1,10 +1,11 @@
 {% extends "core/base.html" %}
 {% load bootstrap3 %}
+{% load i18n %}
 
 {% block main %}
 <div class="page-header">
   <h1>
-    BTC - Exchange <small>User Registration</small>
+    {% trans "BTC - Exchange" %} <small>{% trans "User Registration" %}</small>
   </h1>
 </div>
 
