--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -52,7 +52,7 @@
 						      <div class="panel-body">
 						      	<center>
 					    		<button type="submit" class="btn btn-success btn-lg">{% trans "Place" %}</button>
-					    		<button type="button" class="btn btn-warning btn-lg" onclick="window.location.href='/transaction/'">{% trans "Exit" %}</button>
+					    		<button type="button" class="btn btn-warning btn-lg" onclick="window.location.href='/order/'">{% trans "Exit" %}</button>
 								</center>
 							 </div>
 							</div>
