prevents changes on withdraw address if Order is frozen.

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -136,6 +136,10 @@ select {
     cursor:pointer;
 }
 
+.frozen:hover {
+  cursor:not-allowed !important;
+}
+
 
 /*target Internet Explorer 9 and Internet Explorer 10:*/
 @media screen and (min-width:0\0) { 
