--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -59,28 +59,32 @@
 		                <td>{{ order.amount_cash }}</td>
 		            	<td>{{ order.amount_btc }}</td>
 
-		            	<td>
-							{% if order.frozen %}
-								{% if order.is_paid %}
-									<button type="button" style="width:90px" data-switch-toggle="readonly" disabled="disabled"  class="btn btn-success">{% trans 'Paid' %}</button>
-								{% else %}
-									<button type="button" style="width:90px" data-switch-toggle="readonly" disabled="disabled" class="btn btn-danger">{% trans 'Not Paid' %}</button>
-								{% endif %}
+	            	
+						{% if order.frozen %}
+						<td class="frozen">
+							{% if order.is_paid %}
+								<button type="button" style="width:90px" data-switch-toggle="readonly" disabled="disabled"  class="btn btn-success">{% trans 'Paid' %}</button>
 							{% else %}
-								<label class="checkbox-inline">
-									<input type="checkbox"
-
-										data-offstyle="danger"
-										data-onstyle="success"
-										{% if order.is_paid %}
-											checked 
-										{% endif %}
-										data-toggle="toggle"  
-										data-on="{% trans 'Paid' %}" 
-										data-width="90px"
-										data-off="{% trans 'Not Paid' %}">
-								</label>
+								<button type="button" style="width:90px" data-switch-toggle="readonly" disabled="disabled" class="btn btn-danger">{% trans 'Not Paid' %}</button>
 							{% endif %}
+						</td>
+						{% else %}
+						<td>
+							<label class="checkbox-inline">
+								<input type="checkbox"
+
+									data-offstyle="danger"
+									data-onstyle="success"
+									{% if order.is_paid %}
+										checked 
+									{% endif %}
+									data-toggle="toggle"  
+									data-on="{% trans 'Paid' %}" 
+									data-width="90px"
+									data-off="{% trans 'Not Paid' %}">
+							</label>
+						</td>	
+						{% endif %}
 						</td>
 
 		            	{% if order.is_released == 1 %}
@@ -94,6 +98,14 @@
 		                <td><img src="/static/icons/close_16.png" \></td>
 		            	{% endif %}
 
+
+						{% if order.frozen %}
+						<td title="{% trans 'Click to edit Withdraw Address' %}">
+							<span class="frozen">
+								{{order.withdraw_address | default_if_none:_("Not Defined")}}
+							</span>
+						</td>
+						{% else %}
 		            	<td title="{% trans 'Click to edit Withdraw Address' %}">
 		            		<i class="fa fa-pencil" aria-hidden="true"></i>
 							<span class="withdraw_address" 
@@ -106,6 +118,7 @@
 								{{order.withdraw_address | default_if_none:_("Not Defined")}}
 							</span>
 		            	</td>
+		            	{% endif %}
 	
 			        </tr>
 	        	        
