payment_confirmation: Finishes implementation. Users can now set orders as paid via toggle control on orders list  page. #TIME 3h

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -153,7 +153,8 @@ select {
 
   <script type="text/javascript">
     // TODO: which is the best way to translate JS messages?
-    var HTTP_500_MSG = "{% trans 'Service unavailable. Please try again later.' %}"
+    var HTTP_500_MSG = "{% trans 'Service unavailable. Please try again later.' %}";
+    var UNKNOW_ERROR = HTTP_500_MSG;
   </script>
 </head>
 
